Add Form markup

--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Webpack App</title>
-    </head>
-    <body>
-        <h1>Hello world!</h1>
-        <h2>Tip: Check your console</h2>
-    </body>
-    
+<head>
+    <meta charset="utf-8" />
+    <meta
+        name="viewport"
+        content="width=device-width,initial-scale=1,shrink-to-fit=no"
+    />
+    <title>Hexlet Frontend Project</title>
+</head>
+<body>
+    <main>
+        <section>
+            <h1>RSS агрегатор</h1>
+            <p>Начните читать RSS сегодня! Это легко, это красиво.</p>
+            <form>
+                <div>
+                    <input id="text-input" value="" placeholder="ссылка RSS" />
+                    <label for="text-input">Cсылка RSS</label>
+                </div>
+                <div>
+                    <button>Добавить</button>
+                </div>
+            </form>
+        </section>
+    </main>
+</body>
 </html>
